--- a/css/style.css
+++ b/css/style.css
@@ -1,15 +1,7 @@
-/*--------------------------------------------------------------------- import Fonts ---------------------------------------------------------------------*/
-
-@import url('https://fonts.googleapis.com/css?family=Rajdhani:300,400,500,600,700');
-@import url('https://fonts.googleapis.com/css?family=Poppins:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i');
-
-/*
-1) font-family: 'Rajdhani', sans-serif;
-2) font-family: 'Poppins', sans-serif;
-
-/*--------------------------------------------------------------------------------------------------------------------------------------------------------*/
-
-body
+body 
 {
-    font-family: Poppins;
+  margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  font-weight: 300;
+  color: #404040;
 }
