--- a/css/style.css
+++ b/css/style.css
@@ -19,6 +19,28 @@ body {
   margin-right: 0.625rem;  
 }
 
+.wyb_postaci td {
+  transition: box-shadow .3s;
+  transition: transform .3s;
+  width: 300px;
+  height: 500px;
+  margin: 50px;
+  border-radius:10px;
+  border: 3px solid #4d4d4d;
+  background: #fff;
+  float: left;
+  text-align: center;
+  vertical-align: middle;
+  line-height: 500px;  
+  font-weight: bold;
+  font-size: 2.925rem;
+}
+.wyb_postaci td:hover {
+  box-shadow: 0 0 20px #3498db;
+  transform: scale(1.01);
+  color: #3498db;
+}
+
 #search {
   display: block;
   padding: 0.5rem 0.75rem;
@@ -43,5 +65,6 @@ body {
   height: 44px;
 }
 #home:hover {
+  content: url("../img/home2.svg");
   transform: scale(1.1);
 }
