--- a/css/style.css
+++ b/css/style.css
@@ -19,12 +19,45 @@ body {
   margin-right: 0.625rem;  
 }
 
+.main {
+  margin-left: 1.825rem;
+  margin-right: 1.825rem;
+}
+
+.wyb_teamu {
+  width: 100%;
+}
+.wyb_teamu td {
+  transition: box-shadow .3s;
+  transition: transform .3s;
+  width: 100%;
+  height: 200px;
+  margin-top: 30px;
+  border-radius:10px;
+  border: 3px solid #4d4d4d;
+  background: #fff;
+  float: left;
+  text-align: center;
+  vertical-align: middle;
+  line-height: 200px;  
+  font-weight: bold;
+  font-size: 2.925rem;
+}
+.wyb_teamu td:hover {
+  box-shadow: 0 0 20px #3498db;
+  transform: scale(1.01);
+  color: #3498db;
+}
+
+.wyb_postaci {
+  width: 100%;
+}
 .wyb_postaci td {
   transition: box-shadow .3s;
   transition: transform .3s;
   width: 300px;
   height: 500px;
-  margin: 50px;
+  margin: 45px;
   border-radius:10px;
   border: 3px solid #4d4d4d;
   background: #fff;
