--- a/css/style.css
+++ b/css/style.css
@@ -52,7 +52,7 @@ body {
 .wyb_postaci {
   width: 100%;
 }
-.wyb_postaci td {
+.wyb_postaci tr {
   transition: box-shadow 0.3s, transform 0.3s;
   width: 300px;
   height: 500px;
@@ -62,13 +62,16 @@ body {
   border: 3px solid #4d4d4d;
   background: #fff;
   text-align: center;
+  display: flex;
+  justify-content: center; 
+  align-items: center;
   vertical-align: middle;
   line-height: 500px;
   font-weight: bold;
   font-size: 2.925rem;
   cursor: pointer;
 }
-.wyb_postaci td:hover {
+.wyb_postaci tr:hover {
   box-shadow: 0 0 20px #3498db;
   transform: scale(1.01);
   color: #3498db;
